--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <title>MisoWriting - Blog</title>
   <style>
     body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #0d0d0d;
-      color: #f0f0f0;
-      line-height: 1.6;
-    }
+  margin: 0;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #ffffff;  /* putih */
+  color: #111111;             /* teks hitam */
+  line-height: 1.6;
+}
     header {
       text-align: center;
       padding: 2rem 1rem;
@@ -59,7 +59,7 @@
 <body>
   <header>
     <h1>MisoWriting</h1>
-    <p>personal writing blog by miso</p>
+    <p>personal writing blog by misora</p>
   </header>
   <main>
     <article>
@@ -72,7 +72,7 @@
     </article>
   </main>
   <footer>
-    <p>© 2025 MisoWriting. Dibuat dengan cinta dan chaos.</p>
+    <p>© 2025 Misora. Love and chaos.</p>
   </footer>
 </body>
 </html>
