--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     header h1 {
       margin: 0;
       font-size: 2.5rem;
-      color: #a78bfa; /* ungu */
+      color: #111111 /* hitam */
     }
     header p {
       margin-top: 0.5rem;
@@ -38,7 +38,7 @@
     }
     article h2 {
       margin: 0 0 0.5rem;
-      color: #22d3ee; /* cyan */
+      color: #111111 /* hitam */
     }
     article a {
       color: inherit;
@@ -58,17 +58,17 @@
 </head>
 <body>
   <header>
-    <h1>MisoWriting</h1>
+    <h1>Misora Katarsis </h1>
     <p>personal writing blog by misora</p>
   </header>
   <main>
     <article>
-      <h2><a href="tulisan1.html">Tulisan Pertama</a></h2>
-      <p>ini contoh isi singkat tulisan pertama lo. klik judul buat baca selengkapnya.</p>
+      <h2><a href="tulisan1.html">The Project Bab 1 </a></h2>
+      <p>Menurut lo, chat GPT bisa tau ga orang yang lagi akses dia meninggal kapan?</p>
     </article>
     <article>
-      <h2><a href="tulisan2.html">Tulisan Kedua</a></h2>
-      <p>ini contoh isi singkat tulisan kedua lo. tiap tulisan bisa punya halaman sendiri.</p>
+      <h2><a href="tulisan2.html">The Project Bab 2</a></h2>
+      <p>Gatau juga kenapa gue bisa liat project orang lain, namanya juga akun sharing.</p>
     </article>
   </main>
   <footer>
