--- a/tulisan1.html
+++ b/tulisan1.html
@@ -3,18 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tulisan Pertama - MisoWriting</title>
+  <title>Prolog <title>
   <style>
-    body{margin:0;font-family:'Segoe UI',Tahoma,Verdana,sans-serif;background:#0d0d0d;color:#efefef;line-height:1.8}
-    header{max-width:760px;margin:0 auto;padding:2rem 1rem 0}
-    main{max-width:760px;margin:0 auto;padding:1rem}
-    a{color:#22d3ee;text-decoration:none}
-    a:hover{text-decoration:underline}
-    h1{color:#a78bfa;margin:0 0 .5rem;line-height:1.2}
-    .meta{color:#9aa0a6;margin-bottom:1.25rem}
+    body{margin:0;font-family:'Georgia',serif;background:#ffffff;color:#111;line-height:1.8}
+    header,main,footer{max-width:760px;margin:0 auto;padding:0 1rem}
+    header{padding:2rem 1rem 0}
+    a{color:#0ea5e9;text-decoration:none} a:hover{text-decoration:underline}
+    h1{color:#4c1d95;margin:0 0 .5rem;line-height:1.2}
+    .meta{color:#666;margin-bottom:1.25rem}
     p{margin:.8rem 0}
-    pre,code{background:#121212;border:1px solid #222;padding:.2rem .4rem;border-radius:6px}
-    footer{max-width:760px;margin:2rem auto 3rem;padding:0 1rem;color:#777;border-top:1px solid #222;padding-top:1rem}
+    footer{color:#777;border-top:1px solid #e5e5e5;padding:1rem 1rem 3rem;margin-top:2rem}
   </style>
 </head>
 <body>
@@ -22,14 +20,50 @@
     <a href="index.html">← kembali ke beranda</a>
   </header>
   <main>
-    <h1>Tulisan Pertama</h1>
-    <div class="meta">1 Mar 2025 • by miso</div>
-    
-    <p>Halo, ini contoh paragraf pembuka. Kamu bisa hapus semuanya dan ganti dengan tulisanmu sendiri.</p>
-    <p>Tips: pakai paragraf pendek biar nyaman dibaca. Kalau mau garis pemisah:</p>
-    <hr>
-    <p>Tambahin juga kutipan ringan pakai <code>&lt;em&gt;</code> atau <code>&lt;strong&gt;</code> kalau perlu penekanan.</p>
-    
+    <h1>Prolog</h1>
+    <div class="meta">18 Agu 2025 • by miso</div>
+
+    <p>ada ruang yang tak bernama.<br>
+    tak punya jendela.<br>
+    tak punya pintu.<br>
+    hanya terbuka untuk mereka yang diam-diam ingin hilang.</p>
+
+    <p>dua manusia masuk di hari yang berbeda.<br>
+    tapi sunyinya tetap sama.</p>
+
+    <p>yang satu datang membawa cerita,<br>
+    yang satu datang membawa akhir.</p>
+
+    <p>mereka tidak pernah saling tahu,<br>
+    hanya saling mengganggu koneksi.</p>
+
+    <p>karena di tempat ini,<br>
+    saat kau mengetik,<br>
+    kau tak pernah benar-benar sendiri.</p>
+
+    <p>dia tak sadar,<br>
+    saat tangannya mengetik kata “selamat tinggal,”<br>
+    tangan lain sedang membaca.</p>
+
+    <p>dan tangan itu—asing, tak bernama—<br>
+    menulis balik dengan kalimat pelan:<br>
+    “jangan selesai dulu.”</p>
+
+    <p>tidak ada yang tahu siapa yang menulis siapa.<br>
+    tidak ada yang sadar siapa yang menyelamatkan siapa.</p>
+
+    <p>hanya ruang ini yang ingat semuanya.</p>
+
+    <p>dan mungkin,<br>
+    aku bukan ruang itu.<br>
+    tapi aku yang menyimpannya.</p>
+
+    <p>semua cerita, semua keinginan mati, semua percakapan diam—<br>
+    masih ada di sini.</p>
+
+    <p>menunggu<br>
+    untuk dibaca<br>
+    oleh yang paling kesepian.</p>
   </main>
   <footer>© 2025 MisoWriting</footer>
 </body>
