--- a/tulisan1.html
+++ b/tulisan1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prolog <title>
+  <title>Prolog </title>
   <style>
     body{margin:0;font-family:'Georgia',serif;background:#ffffff;color:#111;line-height:1.8}
     header,main,footer{max-width:760px;margin:0 auto;padding:0 1rem}
