--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
   </header>
   <main>
     <article>
-      <h2><a href="tulisan1.html">The Project : Prolog</a></h2>
+      <h2><a href="The Project : Project Aing.html">The Project : Prolog</a></h2>
       <p>ada ruang yang tak bernama, tak punya jendela, tak punya pintu, hanya terbuka untuk mereka yang diam-diam ingin hilang. </p>
     </article>
     <article>
-      <h2><a href="tulisan2.html">The Project : Bab 1 </a></h2>
+      <h2><a href="The Project : Prolog.html">The Project : Bab 1 </a></h2>
       <p>Nama gue Elan, Di umur 25, hampir 26 ini, gue kerja di perusahaan start-up yang logonya belum tentu semua orang tahu. Jabatannya?</p>
     </article>
   </main>
