--- a/tulisan2.html
+++ b/tulisan2.html
@@ -15,6 +15,17 @@
       max-width: 760px;
       margin: auto;
     }
+    nav {
+      margin-bottom: 1.5rem;
+      font-size: 0.9rem;
+    }
+    nav a {
+      color: #0ea5e9;
+      text-decoration: none;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
     h1 {
       color: #0ea5e9; /* biru muda */
       margin-bottom: 1rem;
@@ -23,9 +34,23 @@
       margin-bottom: 1rem;
       text-align: justify;
     }
+    footer {
+      margin-top: 3rem;
+      border-top: 1px solid #222;
+      text-align: center;
+      padding-top: 1rem;
+      color: #666;
+      font-size: 0.9rem;
+    }
   </style>
 </head>
 <body>
+  <!-- Tombol kembali & breadcrumb -->
+  <nav>
+    <a href="index.html">← Kembali ke Beranda</a>  
+    | <a href="index.html">miso writing 2025</a> › Bab 1
+  </nav>
+
   <h1>Bab 1 – Project Aing</h1>
 
   <p>Nama gue Elan. Di umur 25, hampir 26 ini, gue kerja di perusahaan start-up yang logonya belum tentu semua orang tahu. Jabatannya? Communication & Community Relation.</p>
@@ -72,5 +97,9 @@
   <p>Malam itu, tab kerja gue berubah jadi ruang lain. Dan gue gak tau,<br>
   apakah gue masuk ke cerita orang, atau orang itu masuk ke hidup gue.</p>
 
+  <!-- Footer -->
+  <footer>
+    © 2025 miso writing
+  </footer>
 </body>
 </html>
