--- a/tulisan2.html
+++ b/tulisan2.html
@@ -99,7 +99,6 @@
 
   <!-- Footer -->
   <footer>
-    © 2025 miso writing
-  </footer>
+    © 2025 Misora. Love And Chaos </footer>
 </body>
 </html>
