--- a/tulisan2.html
+++ b/tulisan2.html
@@ -52,7 +52,7 @@
   </nav>
 
   <h1>Bab 1 – Project Aing</h1>
-
+  <div class="meta">18 Agu 2025 • by miso</div>
   <p>Nama gue Elan. Di umur 25, hampir 26 ini, gue kerja di perusahaan start-up yang logonya belum tentu semua orang tahu. Jabatannya? Communication & Community Relation.</p>
 
   <p>Singkatnya: gue bagian yang keliatan nyantai, tapi kerjaannya gak pernah kelar. Bikin acara, ngurusin relasi sama komunitas, jadi jembatan antara tim dan orang luar, kadang juga jadi panitia dadakan buat ngurus konsumsi. Ya, hidup gue... rame. Di luar kantor pun, gue anak komunitas. Sering nongkrong di skatepark, kadang ikut mural-an, atau bantuin temen-temen yang mau bikin event kecil.</p>
