--- a/tulisan1.html
+++ b/tulisan1.html
@@ -65,6 +65,6 @@
     untuk dibaca<br>
     oleh yang paling kesepian.</p>
   </main>
-  <footer>© 2025 MisoWriting</footer>
+  <footer>© 2025 Misora. Love And Chaos </footer>
 </body>
 </html>
