--- a/tulisan3.html
+++ b/tulisan3.html
@@ -52,6 +52,7 @@
   </nav>
 
   <h1>Bab 2 – Project Last Day</h1>
+  <div class="meta">18 Agu 2025 • by miso</div>
 
   <p>Nama gue gak penting.
   Kalau pun ada yang ingat, mereka bakal lupa beberapa minggu lagi. Gue udah berdamai sama itu.</p>
