--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
       <h2><a href="tulisan2.html">The Project : Bab 1</a></h2>
       <p>Nama gue Elan, Di umur 25, hampir 26 ini, gue kerja di perusahaan start-up yang logonya belum tentu semua orang tahu. Jabatannya?</p>
     </article>
+    <article>
+    <h2><a href="tulisan3.html">The Project : Bab 2</a></h2>
+      <p>Nama gue gak penting.
+      <p>Kalau pun ada yang ingat, mereka bakal lupa beberapa minggu lagi. Gue udah berdamai sama itu.</p>
+    </article>
   </main>
   <footer>
     <p>© 2025 Misora. Love and chaos.</p>
