--- a/index.html
+++ b/index.html
@@ -72,8 +72,7 @@
     </article>
     <article>
     <h2><a href="tulisan3.html">The Project : Bab 2</a></h2>
-      <p>Nama gue gak penting.
-      <p>Kalau pun ada yang ingat, mereka bakal lupa beberapa minggu lagi. Gue udah berdamai sama itu.</p>
+      <p>Nama gue gak penting, Kalau pun ada yang ingat, mereka bakal lupa beberapa minggu lagi. Gue udah berdamai sama itu.</p>
     </article>
   </main>
   <footer>
