--- a/tulisan1.html
+++ b/tulisan1.html
@@ -3,16 +3,33 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prolog </title>
+  <title>Prolog</title>
+  <!-- Import font Poppins dari Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    body{margin:0;font-family:'Georgia',serif;background:#ffffff;color:#111;line-height:1.8}
-    header,main,footer{max-width:760px;margin:0 auto;padding:0 1rem}
-    header{padding:2rem 1rem 0}
-    a{color:#0ea5e9;text-decoration:none} a:hover{text-decoration:underline}
-    h1{color:#4c1d95;margin:0 0 .5rem;line-height:1.2}
-    .meta{color:#666;margin-bottom:1.25rem}
-    p{margin:.8rem 0}
-    footer{color:#777;border-top:1px solid #e5e5e5;padding:1rem 1rem 3rem;margin-top:2rem}
+    body {
+      font-family: 'Poppins', sans-serif; /* Ganti font */
+      background: #fff;
+      color: #111;
+      line-height: 1.8;
+      max-width: 760px;
+      margin: auto;
+      padding: 2rem;
+    }
+    h1 {
+      color: #111;  /* hitam */
+      font-weight: 700;
+    }
+    a {
+      color: #111; /* link jadi hitam */
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline; /* biar ada efek hover */
+    }
+    p {
+      margin-bottom: 1rem;
+    }
   </style>
 </head>
 <body>
