--- a/tulisan2.html
+++ b/tulisan2.html
@@ -4,53 +4,48 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bab 1 – Project Aing</title>
+  <!-- Import font Poppins -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: 'Georgia', serif;
-      background-color: #ffffff; /* putih */
-      color: #111111;            /* hitam */
+      font-family: 'Poppins', sans-serif;
+      background-color: #ffffff;
+      color: #111111;
       line-height: 1.8;
-      padding: 2rem;
       max-width: 760px;
       margin: auto;
-    }
-    nav {
-      margin-bottom: 1.5rem;
-      font-size: 0.9rem;
-    }
-    nav a {
-      color: #0ea5e9;
-      text-decoration: none;
-    }
-    nav a:hover {
-      text-decoration: underline;
+      padding: 2rem;
     }
     h1 {
-      color: #0ea5e9; /* biru muda */
-      margin-bottom: 1rem;
+      color: #111; /* Judul hitam */
+      font-weight: 700;
+      margin-bottom: 0.5rem;
+    }
+    a {
+      color: #111; /* Link hitam */
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
     }
     p {
       margin-bottom: 1rem;
       text-align: justify;
     }
-    footer {
-      margin-top: 3rem;
-      border-top: 1px solid #222;
-      text-align: center;
-      padding-top: 1rem;
-      color: #666;
+    .meta {
       font-size: 0.9rem;
+      color: #555;
+      margin-bottom: 2rem;
     }
   </style>
 </head>
 <body>
-  <!-- Tombol kembali & breadcrumb -->
-  <nav>
-    <a href="index.html">← Kembali ke Beranda</a>  
+  <a href="index.html">← kembali ke beranda</a>
 
   <h1>Bab 1 – Project Aing</h1>
   <div class="meta">18 Agu 2025 • by miso</div>
+
   <p>Nama gue Elan. Di umur 25, hampir 26 ini, gue kerja di perusahaan start-up yang logonya belum tentu semua orang tahu. Jabatannya? Communication & Community Relation.</p>
 
   <p>Singkatnya: gue bagian yang keliatan nyantai, tapi kerjaannya gak pernah kelar. Bikin acara, ngurusin relasi sama komunitas, jadi jembatan antara tim dan orang luar, kadang juga jadi panitia dadakan buat ngurus konsumsi. Ya, hidup gue... rame. Di luar kantor pun, gue anak komunitas. Sering nongkrong di skatepark, kadang ikut mural-an, atau bantuin temen-temen yang mau bikin event kecil.</p>
@@ -94,9 +89,5 @@
 
   <p>Malam itu, tab kerja gue berubah jadi ruang lain. Dan gue gak tau,<br>
   apakah gue masuk ke cerita orang, atau orang itu masuk ke hidup gue.</p>
-
-  <!-- Footer -->
-  <footer>
-    © 2025 Misora. Love And Chaos </footer>
 </body>
 </html>
