--- a/tulisan3.html
+++ b/tulisan3.html
@@ -4,59 +4,53 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bab 2 – Project Last Day</title>
+  <!-- Import font Poppins -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: 'Georgia', serif;
-      background-color: #ffffff; /* putih */
-      color: #111111;            /* hitam */
+      font-family: 'Poppins', sans-serif;
+      background-color: #ffffff;
+      color: #111111;
       line-height: 1.8;
-      padding: 2rem;
       max-width: 760px;
       margin: auto;
-    }
-    nav {
-      margin-bottom: 1.5rem;
-      font-size: 0.9rem;
-    }
-    nav a {
-      color: #0ea5e9;
-      text-decoration: none;
-    }
-    nav a:hover {
-      text-decoration: underline;
+      padding: 2rem;
     }
     h1 {
-      color: #0ea5e9; /* biru muda */
-      margin-bottom: 1rem;
+      color: #111; /* Judul hitam */
+      font-weight: 700;
+      margin-bottom: 0.5rem;
+    }
+    a {
+      color: #111; /* Link hitam */
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
     }
     p {
       margin-bottom: 1rem;
       text-align: justify;
     }
-    footer {
-      margin-top: 3rem;
-      border-top: 1px solid #222;
-      text-align: center;
-      padding-top: 1rem;
-      color: #666;
+    .meta {
       font-size: 0.9rem;
+      color: #555;
+      margin-bottom: 2rem;
     }
   </style>
 </head>
 <body>
-  <!-- Tombol kembali & breadcrumb -->
-  <nav>
-    <a href="index.html">← Kembali ke Beranda</a>  
-  </nav>
+  <a href="index.html">← kembali ke beranda</a>
 
   <h1>Bab 2 – Project Last Day</h1>
   <div class="meta">18 Agu 2025 • by miso</div>
 
-  <p>Nama gue gak penting.
-  Kalau pun ada yang ingat, mereka bakal lupa beberapa minggu lagi. Gue udah berdamai sama itu.</p>
+  <p>Nama gue gak penting. Kalau pun ada yang ingat, mereka bakal lupa beberapa minggu lagi. Gue udah berdamai sama itu.</p>
 
-  <p>Tiap hari gue berhadapan sama tumpukan dokumen, jadwal yang harus rapi, dan orang-orang yang tersenyum manis di depan tapi tajam di belakang. Energi habis di meja kerja, pikiran penuh sampai nyisain ruang untuk diri sendiri pun enggak. Hari ini gue bangun jam enam, mandi kilat, dan masuk kantor sebelum jam delapan. Kerja kayak zombie. Senyum seperlunya, jawab chat kerjaan dengan “ok” atau “siap” tanpa benar-benar membaca isinya. Semua berjalan seperti biasa—biasa untuk ukuran orang yang udah lama gak ngerasa hidup. Pekerjaan gue? Sekretaris. Bukan yang fancy di film-film, lebih ke asisten yang harus ingat semua hal yang bos gue lupakan, jadwal meeting, tanda tangan dokumen, follow-up email yang isinya formal tapi nyuruh orang gerak cepat.</p>
+  <p>Tiap hari gue berhadapan sama tumpukan dokumen, jadwal yang harus rapi, dan orang-orang yang tersenyum manis di depan tapi tajam di belakang. Energi habis di meja kerja, pikiran penuh sampai nyisain ruang untuk diri sendiri pun enggak. Hari ini gue bangun jam enam, mandi kilat, dan masuk kantor sebelum jam delapan. Kerja kayak zombie. Senyum seperlunya, jawab chat kerjaan dengan “ok” atau “siap” tanpa benar-benar membaca isinya. Semua berjalan seperti biasa—biasa untuk ukuran orang yang udah lama gak ngerasa hidup.</p>
+
+  <p>Pekerjaan gue? Sekretaris. Bukan yang fancy di film-film, lebih ke asisten yang harus ingat semua hal yang bos gue lupakan, jadwal meeting, tanda tangan dokumen, follow-up email yang isinya formal tapi nyuruh orang gerak cepat.</p>
 
   <p>Sepanjang hari, gue sibuk nyatetin omongan orang lain. Ketemu banyak wajah, tapi gak ada yang benar-benar liat gue. Gue tersenyum ke semua orang, tapi itu cuma bagian dari jobdesc. Gue kerja bukan karena cinta sama pekerjaan ini. Kalau ada pilihan, gue mending jadi anaknya Raffi–Nagita atau Prabowo—enak, tinggal senyum dapet semuanya. Tapi kenyataannya, gue cuma punya satu alasan: butuh.</p>
 
@@ -68,27 +62,18 @@
 
   <p>Akun sharing-an hasil beli di Shopee. Awalnya cuma buat kerja. Lama-lama, ruang ini jadi satu-satunya tempat gue bisa nulis hal-hal yang gak pernah gue bilang ke siapapun.</p>
 
-  <p>Malam ini, gue buka tab baru.
-  Judulnya: <em>project: last day</em>.</p>
-
-  <p>Gue ngetik tentang pagi yang hampa. Tentang rasa ingin mati yang gak meledak, tapi netes pelan, nyusup sampai ke tulang. Tentang kucing hitam di taman. Tentang hujan yang gak nyembuhin apa-apa.</p>
+  <p>Malam ini, gue buka tab baru. Judulnya: project: last day. Gue ngetik tentang pagi yang hampa. Tentang rasa ingin mati yang gak meledak, tapi netes pelan, nyusup sampai ke tulang. Tentang kucing hitam di taman. Tentang hujan yang gak nyembuhin apa-apa.</p>
 
   <p>Di akhir, gue upload satu foto polaroid digital. Gue duduk di pinggir ranjang, rambut berantakan, mata sembab, senyum setengah hati. Caption-nya:<br>
-  <em>“Kalau ini terakhir, gue pengin ada yang nemu.”</em></p>
+  “Kalau ini terakhir, gue pengin ada yang nemu.”</p>
 
   <p>Gue baca ulang. Luka di pergelangan kiri kebuka lagi—luka lama yang udah berkali-kali gue tutup. Perihnya nyampur sama kantuk. Gue tutup laptop. Rebahan.</p>
 
   <p>Gak tau jam berapa ketiduran. Tapi sebelum gelap total, gue ngerasa layar laptop nyala lagi. Cahaya tipisnya nyusup lewat kelopak mata.</p>
 
   <p>Saat gue buka mata setengah sadar, ada satu kalimat baru di bawah tulisan gue:<br>
-  <em>“Lo masih bisa balik. Gak harus selesai di sini.”</em></p>
+  “Lo masih bisa balik. Gak harus selesai di sini.”</p>
 
-  <p>Gue diem. Jantung gue kayak ditarik pelan ke arah yang asing.</p>
-
-  <p>Gue pikir itu cuma mimpi. Tapi kalimat itu nempel di kepala, dan bikin gue pengen tau… siapa yang berani masuk ke ruang ini.</p>
-
-  <!-- Footer -->
-  <footer>
-    © 2025 Misora. Love And Chaos </footer>
+  <p>Gue diem. Jantung gue kayak ditarik pelan ke arah yang asing. Gue pikir itu cuma mimpi. Tapi kalimat itu nempel di kepala, dan bikin gue pengen tau… siapa yang berani masuk ke ruang ini.</p>
 </body>
 </html>
