--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
     <h2><a href="tulisan3.html">The Project : Bab 2</a></h2>
       <p>Nama gue gak penting, Kalau pun ada yang ingat, mereka bakal lupa beberapa minggu lagi. Gue udah berdamai sama itu.</p>
     </article>
+    <article>
+    <h2><a href="tulisan4.html">The Project : Bab 3</a></h2>
+      <p>Gue gapernah niat buka project orang.</p>
+    </article>
   </main>
   <footer>
     <p>© 2025 Misora. Love and chaos.</p>
