--- a/tulisan4.html
+++ b/tulisan4.html
@@ -56,6 +56,6 @@
   <p>Bukan buat ngintip. Tapi buat jaga. Nunggu update dari seseorang yang gak gue kenal,</p>
   <p>tapi rasanya kayak, kalau gue tinggalin, dia beneran bakal pergi.</p>
 
-  <footer>© 2025 miso writing</footer>
+  <footer>© Misora. Love And Chaos </footer>
 </body>
 </html>
