--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@
     <h2><a href="tulisan4.html">The Project : Bab 3</a></h2>
       <p>Gue gapernah niat buka project orang.</p>
     </article>
+    <article>
+    <h2><a href="tulisan5.html">The Project : Bab 4</a></h2>
+      <p>Gue gak tau kenapa gue nulis di sini. Mungkin karena gak ada yang bisa gue ajak ngobrol tanpa mereka nyelipin nasihat atau tatapan kasihan</p>
+    </article>
   </main>
   <footer>
     <p>© 2025 Misora. Love and chaos.</p>
