--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </article>
     <article>
     <h2><a href="tulisan5.html">The Project : Bab 4</a></h2>
-      <p>Gue gak tau kenapa gue nulis di sini. Mungkin karena gak ada yang bisa gue ajak ngobrol tanpa mereka nyelipin nasihat atau tatapan kasihan</p>
+      <p>Gue gak tau kenapa gue nulis di sini. Mungkin karena gak ada yang bisa gue ajak ngobrol tanpa mereka nyelipin nasihat atau tatapan kasihan.</p>
     </article>
   </main>
   <footer>
