--- a/tulisan5.html
+++ b/tulisan5.html
@@ -73,9 +73,6 @@
 
   <p>Tab ini gue simpen. Biar besok kalau gue masih bangun, gue bisa nambahin sesuatu.<br>
   Atau kalau gue gak ada, siapa tau ada yang nemu.</p>
-
-  <footer>
-    <p>miso writing 2025</p>
-  </footer>
+    <footer>© Misora. Love And Chaos </footer>
 </body>
 </html>
