--- a/tulisan5.html
+++ b/tulisan5.html
@@ -46,7 +46,8 @@
 <body>
   <a href="index.html" class="back-link">← kembali ke beranda</a>
   <h1>Bab 4 – Penulis</h1>
-
+  <div class="meta">18 Agu 2025 • by miso</div>
+  
   <p>Gue gak tau kenapa gue nulis di sini. Mungkin karena gak ada yang bisa gue ajak ngobrol tanpa mereka nyelipin nasihat atau tatapan kasihan. Gue capek liat tatapan itu. Yang kayak bilang, “Ayo semangat, kamu kuat, kok.” Padahal mereka cuma kuat ngucapinnya, gak kuat buat bener-bener ada.</p>
 
   <p>Hari ini hujan. Tipenya yang dingin tapi gak nyembuhin apa-apa. Gue bangun telat, duduk lama di ujung ranjang sambil liatin jemuran yang gak kering-kering. Rasanya kayak hidup gue sendiri, basah, berat, bau apek. Gue ketik satu kalimat di ChatGPT. Bukan buat brainstorming. Bukan buat belajar. Cuma, pengen liat kata-kata itu keluar dari kepala gue. Supaya mereka gak numpuk di dalam.</p>
@@ -73,6 +74,9 @@
 
   <p>Tab ini gue simpen. Biar besok kalau gue masih bangun, gue bisa nambahin sesuatu.<br>
   Atau kalau gue gak ada, siapa tau ada yang nemu.</p>
-    <footer>© Misora. Love And Chaos </footer>
+   
+  <footer>
+    © Misora. Love And Chaos 
+  </footer>
 </body>
 </html>
