--- a/tulisan3.html
+++ b/tulisan3.html
@@ -75,6 +75,9 @@
   “Lo masih bisa balik. Gak harus selesai di sini.”</p>
 
   <p>Gue diem. Jantung gue kayak ditarik pelan ke arah yang asing. Gue pikir itu cuma mimpi. Tapi kalimat itu nempel di kepala, dan bikin gue pengen tau… siapa yang berani masuk ke ruang ini.</p>
-  <footer>© 2025 Misora. Love And Chaos </footer>
+  
+  <footer>
+    © 2025 Misora. Love And Chaos 
+  </footer>
 </body>
 </html>
