--- a/tulisan2.html
+++ b/tulisan2.html
@@ -89,6 +89,9 @@
 
   <p>Malam itu, tab kerja gue berubah jadi ruang lain. Dan gue gak tau,<br>
   apakah gue masuk ke cerita orang, atau orang itu masuk ke hidup gue.</p>
-    <footer>© 2025 Misora. Love And Chaos </footer>
+    
+  <footer>
+    © 2025 Misora. Love And Chaos 
+  </footer>
 </body>
 </html>
