--- a/tulisan1.html
+++ b/tulisan1.html
@@ -82,6 +82,8 @@
     untuk dibaca<br>
     oleh yang paling kesepian.</p>
   </main>
-  <footer>© 2025 Misora. Love And Chaos </footer>
+  <footer>
+    © Misora. Love And Chaos 
+  </footer>
 </body>
 </html>
