--- a/tulisan2.html
+++ b/tulisan2.html
@@ -91,7 +91,7 @@
   apakah gue masuk ke cerita orang, atau orang itu masuk ke hidup gue.</p>
     
   <footer>
-    © 2025 Misora. Love And Chaos 
+    © Misora. Love And Chaos 
   </footer>
 </body>
 </html>
