--- a/tulisan4.html
+++ b/tulisan4.html
@@ -56,6 +56,8 @@
   <p>Bukan buat ngintip. Tapi buat jaga. Nunggu update dari seseorang yang gak gue kenal,</p>
   <p>tapi rasanya kayak, kalau gue tinggalin, dia beneran bakal pergi.</p>
 
-  <footer>© Misora. Love And Chaos </footer>
+  <footer>
+    © Misora. Love And Chaos 
+  </footer>
 </body>
 </html>
